# CLTR

./: README.md
code/: empatica_convert_avro_csv.py  empatica_raw_avro_all.py
docs/: exp.html  index.html  prediction.html  publication.html
docs/atlas/: index.html
docs/atlas/test_dataset/work/: cltr_atlas.html  report_quality_review.md
framework/: .gitignore  README.md  pyproject.toml
framework/cltr_framework/: __init__.py  analysis.py  cli.py  config.py  dataset.py  pipeline.py  preprocessing.py  reporting.py  review.py  utils.py
framework/docs/: research_audit.md
framework/scripts/: create_test_subset.py
framework/scripts/legacy/: empatica_raw_avro_all.py
results/: README.md
results/test_dataset/: run_summary.json
results/test_dataset/analysis/cohort/: agreement_summary.csv  cohort_minute_comparison_window.csv  cohort_minute_features.csv  cohort_phase_summary.csv  cohort_primary_endpoints.csv  condition_contrasts.csv  condition_phase_summary.csv  condition_support_summary.csv  coverage_summary.csv  exploratory_feature_summary.csv  feature_associations.csv  mixed_effects_primary.csv  participant_profiles.csv  pattern_summary.csv  phase_pattern_inventory.csv  predictive_benchmarks.csv  preprocessing_qc_summary.csv  sample_status.csv  sensor_agreement.csv  session_primary_endpoints.csv  session_summary.csv
results/test_dataset/manifests/: session_manifest.csv
results/test_dataset/reports/work/: report_quality_review.json
results/test_dataset/validation/: dataset_structure.json  session_manifest.csv
scripts/: publish_atlas.py
(+24 files in other folders)
